--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@ html {
     box-sizing: border-box;
 }
 
+body {
+    height: 100vh;
+}
+
 *, *:before, *:after {
     box-sizing: inherit;
     margin: 0;
@@ -77,4 +81,10 @@ button:hover {
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 20px;
     padding: 20px;
+}
+
+@media (max-width: 600px) {
+    .calculator {
+        width: 90%;
+    }
 }
